views/container/style.styl
//link-color = link-color
link-color = #36c
corner-radius = 4px
container-padding = 3px
border-color-grey = #DDD

shadow(opacity, height, width, offset)
    -webkit-box-shadow rgba(0, 0, 0, opacity) height width offset
    -moz-box-shadow rgba(0, 0, 0, opacity) height width offset
    box-shadow rgba(0, 0, 0, opacity) height width offset

border-radius(corner-radius)
    -webkit-border-radius corner-radius
    -moz-border-radius corner-radius
    -o-border-radius corner-radius
    -khtml-border-radius corner-radius
    border-top-left-radius corner-radius corner-radius
    border-top-right-radius corner-radius corner-radius
    border-bottom-right-radius corner-radius corner-radius
    border-bottom-left-radius corner-radius corner-radius

transition-property()
    -webkit-transition-property arguments
    -moz-transition-property arguments
    -o-transition-property arguments
    
transition-duration()
    -webkit-transition-duration arguments
    -moz-transition-duration arguments
    -o-transition-duration arguments

transition-timing-function()
    -webkit-transition-timing-function arguments
    -moz-transition-timing-function arguments
    -o-transition-timing-function arguments

transition()
    -webkit-transition arguments
    -moz-transition arguments
    -o-transition arguments
    transition arguments

rounded-image()
        img
            border-radius 4px
            -webkit-box-shadow 0px 0px 4px #999
            -moz-box-shadow 0px 0px 4px #999
            box-shadow 0px 0px 4px #999
            transition(box-shadow, 0.25s, linear)
        a.hover:hover img
            -webkit-box-shadow 0px 0px 4px black
            -moz-box-shadow 0px 0px 4px black
            box-shadow 0px 0px 4px black

body
    .container
        margin-top 0em
        position relative
        font-size 0.8em
        padding-left 0em

        .content-container
            padding container-padding
        a.hover
            display block
            border-right 1px solid transparent
            border-left 1px solid transparent
            -webkit-transition-property color, border-color
            -moz-transition-property color, border-color
            -o-transition-property color, border-color

            -webkit-transition-duration .25s, .25s, .25s
            -moz-transition-duration .25s, .25s
            -o-transition-duration .25s, .25s

            -webkit-transition-duration linear, linear, linear
            -moz-transition-duration linear, linear
            -o-transition-duration linear, linear

            h1, h2, h3, h4, h5, p
                transition(color, .25s, linear)
                color black

            p
                color #444
                line-height 1.5em

        a.hover:hover
            h1, h2, h3, h4
                color link-color

        a.hover.highlight-left:hover
            border-left-color #4D90F0
        a.hover.highlight-right:hover
            border-right-color #4D90F0

        a.hover.highlight-bottom
            border-bottom 1px solid transparent
        a.hover.highlight-bottom:hover
            border-bottom-color #4D90F0


        a.hover.highlight-top
            border-top 1px solid transparent
            margin-top -5px
            padding-top 5px
        a.hover.highlight-top:hover
            border-top-color #4D90F0

        a.hover:hover
            h1, h2, h3, h4, h5
                color link-color
            p
                //color #333

        a.hover p.author
            font-family "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif
            font-size 0.7em
            padding-top 0px
            text-transform uppercase


    .rounded
        padding (container-padding - 1) container-padding (container-padding + 1) container-padding

        a.hover.highlight-right
            margin-right container-padding * -2 - 1
        a.hover.highlight-left
            margin-left container-padding * -2 - 1

        h1, h2, h3, h4, h5
            line-height 1.3em

    .rounded-hover
        padding container-padding (container-padding - 1)


    .image-container
        .container
            img
                border-radius corner-radius
                display block
            .content-container
                padding 0px
    .twitter
        .container
            .text
                h3
                    margin-top -3px
                p
                    font-size 0.85em
                    line-height 1.2em
                    padding-left 1.25em
            img
                padding-left container-padding
                margin-left 3px
                float right
                width 67px
                height 67px


    .featured
        h2
            margin 0px 3px
        .rounded-hover
            padding 0px
            border none

        p.teaser
            color #444
            margin 0px 3px
        img
            border-top-left-radius corner-radius
            border-top-right-radius corner-radius

    .block-row
        rounded-image()
        blocks = 6
        block-padding = 15px
        container-padding = 12px

        row-width = 980px
        //block-width = (row-width + (block-padding * 2)) / blocks - (block-padding * 2)
        block-width = 138px
        full-block-width = block-width * 2
        .rounded
            width 972px
            padding 0px
            h2, h3
                font-size 1em
                margin-bottom 0.5em
                //TODO use jquery to auto measure
                height 47px
                margin-top -5px
                line-height 1.2em

            h2
                font-size 1.5em
                line-height 1.3em

            .content-container
                padding container-padding container-padding 0px container-padding
                margin-bottom -1px
        a.hover
            border none
            border-right 0px
            border-left 0px
            padding 0px block-padding
            width block-width
            height 241px - container-padding
            float left

            img
                display block
                width block-width
                margin-bottom 14px

            p.teaser
                height 65px
                margin-top -4px
                font-size .9em
                line-height 1.4em
        .list-story.first
            padding-top 0px
            p.teaser
                font-size 1.2em
        .list-story.last
            padding-bottom 0px
        a.hover.first
            width full-block-width
            img
                width full-block-width
                margin-bottom 0px

        a.hover.first
            padding-left 0px

        a.hover.last
            padding-right 0px

    .rounded, .rounded-hover
        border-radius(corner-radius)
        shadow(0.398438, 0px, 1px, 3px)
        background-color white
        background -webkit-gradient(linear,left bottom,left top,color-stop(0, whiteSmoke),color-stop(0.33, white))
        background -moz-linear-gradient(center bottom,whiteSmoke 0%,white 33%)
        float left

    a.rounded-hover
        border-left 1px solid transparent
        border-right 1px solid transparent

        h3
            transition color 0.25s linear


    a.list-story
        color black
        display block
        padding 4px 0px 4px 2px

    a.list-story.first
        padding-top 2px

    a.list-story.last
        padding-bottom 2px



    a.hover:hover
        color link-color
        border-bottom-color #4D90F0
        //background #e9e9e9

        //background transparent -webkit-gradient(linear,left bottom,left top,color-stop(0, rgb(237,237,237)),color-stop(.5, rgb(255,255,255)))
        //background transparent -moz-linear-gradient(center bottom,rgb(237,237,237) 0%,rgb(255,255,255) 50%)
        
    
    .vertical-container
        // will be unhidden by vertical align js function
        visibility hidden
        font-size 1em
        writing-mode tb-rl
        filter flipv fliph
        
        -webkit-transform rotate(-90deg)
        -moz-transform rotate(-90deg)
        -o-transform rotate(-90deg)
        white-space nowrap
        display block
        
        float left
        
        -webkit-transform-origin-x 0px
        -webkit-transform-origin-y 100%
        
        -moz-transform-origin 0px 100%
        position absolute
        margin-top -14px
        margin-left 1px
        //border-bottom 3px solid #666
        
            
        .vertical
            font-size 0.9em
            color #444
            letter-spacing 1px
            text-shadow 0px 1px 1px white
            text-transform uppercase
            margin-bottom -2px

    .most-popular ol li
        list-style decimal outside

    .most-popular ol li h2
        margin-left -9px

    .most-popular ol
        margin-left 18px
        font-family Georgia,"Century Schoolbook","Times New Roman",Times,serif

.lighten
    img
        opacity 0.8
        transition opacity 0.25s linear

.lighten a.hover, .lighten a.rounded-hover
    :hover
        img
            opacity 1
        h3
            color #36c

